--- a/src/UI_phase_I.html
+++ b/src/UI_phase_I.html
@@ -3,28 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dynamic Chat Interface</title>
+<title>Mental Health ChatBot</title>
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #000;
+    background-color: #444;
     color: #fff;
     margin: 0;
     padding: 0;
   }
   
   .chat-container {
-    width: 400px;
+    width: 100%;
     max-width: 100%;
-    margin: 20px auto;
+    height: 100vh;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    background-color: #111;
+    background-color: #555;
   }
 
   .chat-header {
-    background-color: #007bff;
+    background-color: #777;
     color: #fff;
     padding: 10px 20px;
     display: flex;
@@ -39,14 +39,14 @@
   }
 
   .chat-messages {
-    max-height: 250px;
+    max-height: calc(100% - 180px);
     overflow-y: auto;
     padding: 10px 20px;
-    background-color: #222;
+    background-color: #666;
   }
 
   .chat-message {
-    background-color: #333;
+    background-color: #777;
     border-radius: 10px;
     padding: 10px 20px;
     margin: 5px 0;
@@ -64,21 +64,21 @@
     display: flex;
     align-items: center;
     padding: 10px 20px;
-    background-color: #222;
+    background-color: #777;
   }
 
   .chat-input {
     flex: 1;
     padding: 10px;
-    border: 1px solid #444;
+    border: 1px solid #999;
     border-radius: 5px;
     margin-right: 10px;
-    color: #fff;
-    background-color: #333;
+    color: #000;
+    background-color: #fff; 
   }
 
   .send-button {
-    background-color: #007bff;
+    background-color: #777;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -87,12 +87,12 @@
   }
 
   .send-button:hover {
-    background-color: #0056b3;
+    background-color: #666;
   }
 
   .settings-button,
   .recent-button {
-    background-color: #007bff;
+    background-color: #777;
     color: #fff;
     border: none;
     padding: 8px 15px;
@@ -102,21 +102,20 @@
 
   .settings-button:hover,
   .recent-button:hover {
-    background-color: #0056b3;
+    background-color: #666;
   }
 </style>
 </head>
 <body>
   <div class="chat-container">
     <div class="chat-header">
-      <h1>Chat Interface</h1>
+      <h1>Mental Health ChatBot</h1>
       <div>
         <button class="settings-button" onclick="openSettings()">Settings</button>
         <button class="recent-button" onclick="openRecent()">Recent</button>
       </div>
     </div>
     <div class="chat-messages" id="chat-messages">
-      <!-- Chat messages will appear here -->
     </div>
     <div class="chat-input-container">
       <input type="text" class="chat-input" id="user-input" placeholder="Type your message...">
@@ -131,19 +130,14 @@
       
       if (userMessage === "") return;
 
-      // Append user message to chat
       appendMessage(userMessage, "user");
 
-      // Simulate bot typing
       showTypingIndicator();
 
-      // Simulate delay for bot response (replace with actual API call)
       setTimeout(function() {
-        // Remove typing indicator
         hideTypingIndicator();
 
-        // Simulate bot response
-        var botResponse = "This is a simulated bot response.";
+        var botResponse = "";
         appendMessage(botResponse, "bot");
       }, 1000);
 
@@ -178,12 +172,11 @@
     }
 
     function openSettings() {
-      // Replace with your settings logic
+     
       alert("Opening settings...");
     }
 
     function openRecent() {
-      // Replace with your recent conversations logic
       alert("Viewing recent conversations...");
     }
   </script>
